[gd_scene load_steps=15 format=3 uid="uid://cj353trsm0c6r"]

[ext_resource type="Script" uid="uid://5g8653tk6yx" path="res://scenes/page_7.gd" id="1_agkm7"]
[ext_resource type="Texture2D" uid="uid://bmcuqd10n2j5q" path="res://images/paginas/pagina7/PÃ¡gina 7.png" id="2_xd7ib"]
[ext_resource type="Texture2D" uid="uid://b51bi1vtf1fdh" path="res://images/botoes/audio/SOM_LIGADO.png" id="3_8x2ht"]
[ext_resource type="Texture2D" uid="uid://rdwygqidmpt7" path="res://images/botoes/audio/SOM_DESLIGADO.png" id="4_xvyqk"]
[ext_resource type="Texture2D" uid="uid://2ip5yli5f1e4" path="res://images/botoes/navegacao/Posterior.png" id="5_crktd"]
[ext_resource type="Texture2D" uid="uid://pqq4xkj26oc4" path="res://images/paginas/pagina7/Vitoria.png" id="5_i5m4e"]
[ext_resource type="Texture2D" uid="uid://bbwxjdogi2eao" path="res://images/botoes/navegacao/Posterior_Pressed.png" id="6_i5m4e"]
[ext_resource type="Texture2D" uid="uid://dd10kv8fc10tl" path="res://images/paginas/pagina7/Hypolito.png" id="6_xd7ib"]
[ext_resource type="Texture2D" uid="uid://ci7l3g8g72n0d" path="res://images/botoes/navegacao/Anterior.png" id="7_xd7ib"]
[ext_resource type="Texture2D" uid="uid://ys3a60rhi5an" path="res://images/botoes/navegacao/Anterior_Pressed.png" id="8_wg7um"]
[ext_resource type="VideoStream" uid="uid://p6hctb81l7y6" path="res://videos/intro3.ogv" id="11_i5m4e"]
[ext_resource type="Texture2D" uid="uid://dr72urhkkhxjh" path="res://images/paginas/pagina7/fotos_bbb.png" id="11_xd7ib"]
[ext_resource type="Texture2D" uid="uid://c22ubdb4uegfg" path="res://images/paginas/pagina7/bbb_iniciar.png" id="12_i5m4e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xd7ib"]

[node name="Page7" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_agkm7")

[node name="Fundo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_xd7ib")

[node name="ButtonAudioON" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 654.0
offset_top = 516.0
offset_right = 714.0
offset_bottom = 576.0
texture_normal = ExtResource("3_8x2ht")

[node name="ButtonAudioOFF" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 654.0
offset_top = 517.0
offset_right = 714.0
offset_bottom = 577.0
texture_normal = ExtResource("4_xvyqk")

[node name="ButtonVitoria" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 158.0
offset_right = 1230.0
offset_bottom = 878.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("5_i5m4e")
stretch_mode = 0

[node name="ButtonHypolito" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 160.0
offset_right = 612.0
offset_bottom = 356.0
scale = Vector2(0.36, 0.36)
texture_normal = ExtResource("6_xd7ib")

[node name="ButtonNext" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 892.0
offset_right = 731.0
offset_bottom = 990.0
texture_normal = ExtResource("5_crktd")
texture_pressed = ExtResource("6_i5m4e")

[node name="ButtonPrevious" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 893.0
offset_right = 298.0
offset_bottom = 991.0
texture_normal = ExtResource("7_xd7ib")
texture_pressed = ExtResource("8_wg7um")

[node name="Paredao" type="Sprite2D" parent="."]
position = Vector2(353.5, 69.5)
scale = Vector2(0.270318, 0.268987)
texture = ExtResource("11_xd7ib")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 25.0
offset_right = 429.0
offset_bottom = 115.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_xd7ib")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 1921.0
offset_bottom = 1082.0
scale = Vector2(0.08, 0.08)
stream = ExtResource("11_i5m4e")

[node name="ButtonVideo" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 27.0
offset_right = 1042.0
offset_bottom = 462.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("12_i5m4e")
